--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "method-override": "~2.1.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.9.0",
+    "jest": "^23.6.0",
+    "superagent": "^4.0.0",
+    "supertest": "^3.3.0"
   }
 }
